Fix 'Summary line of reconcilation uses Deposits/Payments rather than Charges/Payments for credit cards'

BUG:413555
FIXED-IN:4.8.5